--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "build": "tsc",
     "start": "node src/index.ts",
-    "start:watch": "nodemon src/index.ts"
+    "start:watch": "nodemon src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cob": "jest --coverage"
   },
   "dependencies": {
     "canvas": "^2.9.0",
@@ -18,8 +21,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
     "@types/sharp": "^0.29.5",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
