--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/sharp": "^0.29.5",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
